--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy_final.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_set_therapy_final.xml
@@ -14,18 +14,18 @@
         android:fontFamily="@font/roboto"
         android:text="@string/terapie_nastavena"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView10"
+        app:layout_constraintBottom_toTopOf="@+id/imgVeverka"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView10"
+        android:id="@+id/imgVeverka"
         android:layout_width="wrap_content"
         android:layout_height="360dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintBottom_toTopOf="@+id/txtContinue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         app:srcCompat="@drawable/veverka_skok" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/txtContinue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -43,6 +43,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+        app:layout_constraintTop_toBottomOf="@+id/imgVeverka" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
