UI almost completed

--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_preparation_recording1.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_preparation_recording1.xml
@@ -10,29 +10,33 @@
         android:id="@+id/continueButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/roundcorner32"
         android:fontFamily="@font/roboto"
         android:padding="16dp"
         android:text="@string/pokracovat"
         android:textColor="@color/colorWhite"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/backButton"
-        tools:layout_editor_absoluteY="656dp" />
+        app:layout_constraintStart_toEndOf="@+id/backButton" />
 
     <Button
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/roundedcorner32_blue_stroke"
         android:fontFamily="@font/roboto"
         android:padding="16dp"
         android:text="@string/zpet"
         android:textColor="@color/colorBlue"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/continueButton"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="656dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
