--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise_instructions.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise_instructions.xml
@@ -38,10 +38,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/backButton" />
+        app:layout_constraintStart_toEndOf="@+id/btnPreparation" />
 
     <Button
-        android:id="@+id/backButton"
+        android:id="@+id/btnPreparation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
