--- a/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise_timer.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/layout/fragment_exercise_timer.xml
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/roundcorner32"
+        android:background="@drawable/roundcorner32_gray"
         android:fontFamily="@font/roboto"
         android:padding="16dp"
         android:text="@string/pokracovat"
@@ -73,16 +73,17 @@
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="352dp"
-        android:layout_height="453dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         app:layout_constraintBottom_toTopOf="@+id/txtTimeLeft"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.503"
         app:srcCompat="@drawable/pos1" />
 
     <ImageView
